fix: infinite recursion on LongInputWidget.clamp()